overflow bug fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ Navbar
 }
 @media screen and (max-width:768px){
     .navbar{
-        width: 30vw;
+        width: 50vw;
     }
 }
 /*
